--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                     <label class="input-label">Password</label>
                 </div>
                 <div class="action">
-                    <button class="action-button">Get started</button>
+                    <button class="action-button" onclick="location.href = './index.html';">Get started</button>
                 </div>
             </form>
             <div class="card-info">
