--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 	<head>
 		<title>FRIDGE 2 PLATE</title>
 		<meta charset="utf-8" />
@@ -7,108 +8,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
-	<body class="is-preload">
+	<div class="topnav">
+		<a id="topnav-button" href="#home">Home</a>
+		<a id="topnav-button" href="#saved">Saved Recipes</a>
+		<a id="topnav-button" href="#about">About Us</a>
+	</div>
 
-		<!-- Navbar -->
-		<div class="topnav">
-			<button class="button">Home</button>
-			<button class="button">About Us</button>
-			<button class="button">Saved Recipes</button>
-			<button class="button">Account</button>
-		</div>
-
-		<!-- Header -->
-			<div id="header">
-
-				<div class="top">
-
-					<!-- Logo -->
-						<div id="logo">
-							<h1 id="title">Choose your ingredients below:</h1>
-							<p>-----------------------------------------------------------------</p>
-						</div>
-
-				</div>
-				<h1 class="grid-container">Hello</h1>
-				<div class="grid-container">
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-				</div>
-
-				  <div class="grid-container">
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-				</div>
-
-				<div class="grid-container">
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-				</div>
-
-				<div class="grid-container">
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-					<button class="grid-item">1</button>
-				</div>
-				  
-
-			</div>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Contact -->
-					<section id="contact" class="four">
-						<div class="container">
-
-							<header>
-								<h2>Contact</h2>
-							</header>
-
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-							
-						</div>
-					</section>
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-
-			<script src="assets/js/breakpoints.min.js"></script>
-
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
