--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <body>
 	<nav class="top-nav-bar">
+    <div class="top-nav-bar-container">
+      <a href="#home">Home</a>
+      <a href="#about">About Us</a>
+      <a href="#saved">Saved Recipes</a>
+    </div>
 	</nav>
+
 	<nav class="navbar">
 		<ul class="navbar-nav">
 
@@ -20,6 +26,7 @@
 			</li>
 
 			<li class="nav-item">
+        <h2>Meat</h2>
 				<section class="basic-grid">
 					<div class="card">1</div>
 					<div class="card">2</div>
@@ -34,6 +41,7 @@
 			</li>
 
 			<li class="nav-item">
+        <h2>Dairy</h2>
 				<section class="basic-grid">
 					<div class="card">1</div>
 					<div class="card">2</div>
