--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
 	<nav class="top-nav-bar">
-    <div class="top-nav-bar-container">
-      <a href="#home">Home</a>
-      <a href="#about">About Us</a>
-      <a href="#saved">Saved Recipes</a>
-    </div>
+    <ul class="top-nav-bar-container">
+      <li class="top-nav-bar-btn" href="#home">Home</li>
+      <li class="top-nav-bar-btn" href="#about">About Us</li>
+      <li class="top-nav-bar-btn" href="#saved">Saved Recipes</le>
+    </ul>
 	</nav>
 
 	<nav class="navbar">
