--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
    
   
 	<nav class="top-nav-bar">
-    <ul class="top-nav-bar-container">
-      <li class="top-nav-bar-btn" href="#home">Home</li>
-      <li class="top-nav-bar-btn" href="#about">About Us</li>
-      <li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>
-	</le>
-		
-    </ul>
-    
+		<ul class="top-nav-bar-container">
+			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
+			<li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
+			<li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>	
+		</ul>
 	</nav>
 
 	<nav class="navbar">
