changed about name and started recipe css

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <title>Link CSS to HTML</title>
-    <link rel="stylesheet" href="assets/css/AboutPageStyle.css" />
+    <link rel="stylesheet" href="assets/css/about.css" />
 </head>
     
     <body>
