--- a/recipes.html
+++ b/recipes.html
@@ -18,18 +18,16 @@
 
 	
 	<main>
-		<section class="layout">
-      <div class="card">
-        <h1>Hey</h1>
-        <img src="assets/images/star.svg" width="50" height="50"/>
-      </div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-    </section>
+		<div class="container">
+      <div class="card">0</div>
+      <div class="card">1</div>
+      <div class="card">2</div>
+      <div class="card">3</div>
+      <div class="card">4</div>
+      <div class="card">5</div>
+      <div class="card">6</div>
+      <div class="card">7</div>
+    </div>
   </main>
+  <div class="paginator">Page 1</div>
 </body>
