recipe page and functions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>	
+			<li button class="top-nav-bar-btn" onclick="location.href = './login.html';">Login</button>	
 		</ul>
 	</nav>
 
@@ -93,12 +94,15 @@
 	</nav>
 
 	<main> 
-		
-		<p id="doThis"></p>
+		<!--
+			&nbsp is a non breaking space entity to ensure the botton does not move when entering ingredients
+		-->
+		<p id="doThis">&nbsp</p>
+		<button class="generate-btn" onclick="location.href = './recipes.html';">Generate Recipes</button>
     
 	
     </main>
-
+ 
 	
 
 </body>
