--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -14,6 +14,7 @@
 			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>	
+            <li button class="top-nav-bar-btn" onclick="location.href = './login.html';">Login</button>	
 		</ul>
 	</nav>
   
