--- a/recipes.html
+++ b/recipes.html
@@ -32,18 +32,102 @@
           getRecipeName(0)
           getIsFavourite(0)
         </script>
-        <h2 id="category"></h2>
-        <h1 id="favourite"></h1>
-        <h4 id="name"></h4>
+        <h2 id="category0"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food0" class="food">
+        <h4 id="name0"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star0" onclick=changeIsFavourite(0)>
       </div>
 
-      <div class="card">1</div>
-      <div class="card">2</div>
-      <div class="card">3</div>
-      <div class="card">4</div>
-      <div class="card">5</div>
-      <div class="card">6</div>
-      <div class="card">7</div>
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(1)
+          getRecipeName(1)
+          getIsFavourite(1)
+        </script>
+        <h2 id="category1"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food1" class="food">
+        <h4 id="name1"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star1" onclick=changeIsFavourite(1)>
+      </div>
+      
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(2)
+          getRecipeName(2)
+          getIsFavourite(2)
+        </script>
+        <h2 id="category2"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food2" class="food">
+        <h4 id="name2"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star2" onclick=changeIsFavourite(2)>
+      </div>
+
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(3)
+          getRecipeName(3)
+          getIsFavourite(3)
+        </script>
+        <h2 id="category3"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food3" class="food">
+        <h4 id="name3"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star3" onclick=changeIsFavourite(3)>
+      </div>
+
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(4)
+          getRecipeName(4)
+          getIsFavourite(4)
+        </script>
+        <h2 id="category4"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food4" class="food">
+        <h4 id="name4"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star4" onclick=changeIsFavourite(4)>
+      </div>
+
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(5)
+          getRecipeName(5)
+          getIsFavourite(5)
+        </script>
+        <h2 id="category5"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food5" class="food">
+        <h4 id="name5"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star5" onclick=changeIsFavourite(5)>
+      </div>
+
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(6)
+          getRecipeName(6)
+          getIsFavourite(6)
+        </script>
+        <h2 id="category6"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food6" class="food">
+        <h4 id="name6"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star6" onclick=changeIsFavourite(6)>
+      </div>
+
+      <div class="card">
+        <script src="assets/js/dataFetch.js"></script>
+        <script>
+          getRecipeCategory(7)
+          getRecipeName(7)
+          getIsFavourite(7)
+        </script>
+        <h2 id="category7"></h2>
+        <img src="assets/images/food/beef-stir-fry.jpg" id="food7" class="food">
+        <h4 id="name7"></h4>
+        <img src="assets/images/star.svg" class="favourite-grey" id="star7" onclick=changeIsFavourite(7)>
+      </div>
     </div>
   </main>
 
