navbar to about page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
-    rel="stylesheet"
-  />
-  <script src="index.js"></script>
-  
+	<title>Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="assets/css/style.css" />
+	<link
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+		rel="stylesheet"
+	/>
+	<script src="assets/js/selectionAdd.js"></script>
 </head>
 
 <body>
@@ -93,7 +93,7 @@
 		</ul>
 	</nav>
 
-	<main> 
+	<main>
 		<!--
 			&nbsp is a non breaking space entity to ensure the botton does not move when entering ingredients
 		-->
