--- a/recipes.html
+++ b/recipes.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 
-<script src="assets/js/dataFetch.js" type="javascript/text"></script>
-<noscript>Sorry your browser does not support JavaScript</noscript>
-
 <head>
+  <title>Recipes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/recipes.css" />
   <link
