--- a/about.html
+++ b/about.html
@@ -1,13 +1,27 @@
-
 <!DOCTYPE html>
 
 <html>
 <head>
-    <title>Link CSS to HTML</title>
+    <title>About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/about.css" />
 </head>
     
     <body>
+    	<nav class="top-nav-bar">
+            <ul class="top-nav-bar-container">
+                <li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
+                <li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
+                <li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>
+          <li button class="top-nav-bar-btn" onclick="location.href = './login.html';">Login</button>	
+            </ul>
+        </nav>
+
         <h1> We are a Australian made and based company that are striving to create a meal planner 
              that can be used across the planet. We also trying to make the world a 
              better place by putting some health back into it! </h1>
@@ -21,7 +35,7 @@
     
     <body>
         <h4> Hear from our Happy Customers </h4>
-        <img src="images/review_photo.jpg" alt="Image description">
+        <img src="images/review_photo.jpg" id="review-image">
         <p>Amazing app! So simple to use and helped me become so much healthier and not waste food! 
            Thank you for creating this app and changing my life!</p>
 
