--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
 		rel="stylesheet"
 	/>
-	<script src="assets/js/selectionAdd.js"></script>
+	<script src="assets/js/addSelection.js"></script>
 </head>
 
 <body>
-
-	
-   
-  
 	<nav class="top-nav-bar">
 		<ul class="top-nav-bar-container">
 			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
@@ -35,15 +31,15 @@
 			<li class="nav-item">
         <h2>Meat</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="duplicate()">Beef</div>
-					<div class="card">Chicken</div>
-					<div class="card">Lamb</div>
-					<div class="card">Fish</div>
-					<div class="card">Veal</div>
-					<div class="card">Goat</div>
-					<div class="card">Pork</div>
-					<div class="card">Mutton</div>
-					<div class="card">Kangaroo</div>
+					<div class="card" onclick="addSelection('Beef')">Beef</div>
+					<div class="card" onclick="addSelection('Chicken')">Chicken</div>
+					<div class="card" onclick="addSelection('Lamb')">Lamb</div>
+					<div class="card" onclick="addSelection('Fish')">Fish</div>
+					<div class="card" onclick="addSelection('Veal')">Veal</div>
+					<div class="card" onclick="addSelection('Goat')">Goat</div>
+					<div class="card" onclick="addSelection('Pork')">Pork</div>
+					<div class="card" onclick="addSelection('Mutton')">Mutton</div>
+					<div class="card" onclick="addSelection('Kangaroo')">Kangaroo</div>
 				</section>
 			</li>
 
@@ -93,11 +89,9 @@
 		</ul>
 	</nav>
 
-	<main>
-		<!--
-			&nbsp is a non breaking space entity to ensure the botton does not move when entering ingredients
-		-->
-		<p id="doThis">&nbsp</p>
+	<main id="main">
+		<div class="container" id="selection-container"></div>
+
 		<button class="generate-btn" onclick="location.href = './recipes.html';">Generate Recipes</button>
     
 	
