--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
 	<nav class="top-nav-bar">
+		<img class = "logo" src="assets/images/logo.png" alt="logo">
 		<ul class="top-nav-bar-container">
+			
 			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './saved-recipes.html';">Saved Recipes</button>	
@@ -69,7 +71,7 @@
 					<div class="card" onclick="addSelection('Lettuce')">Lettuce</div>
 					<div class="card" onclick="addSelection('Cabbage')">Cabbage</div>
 					<div class="card" onclick="addSelection('Corn')">Corn</div>
-					<div class="card" onclick="addSelection('Bean Sprouts')">Been Sprouts</div>
+					<div class="card" onclick="addSelection('Bean Sprouts')">Bean Sprouts</div>
 					<div class="card" onclick="addSelection('Bok Choy')">Bok Choy</div>
 				</section>
 			</li>
