--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -12,6 +12,7 @@
 
 <body>
 	<nav class="top-nav-bar">
+    <img class = "logo" src="assets/images/logo.png" alt="logo">
 		<ul class="top-nav-bar-container">
 			<li button class="top-nav-bar-btn" onclick="location.href = './index.html';">Home</button>
 			<li button class="top-nav-bar-btn" onclick="location.href = './about.html';">About Us</button>
