--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -33,7 +33,7 @@
                 getIsFavourite(1)
                 </script>
                 <h2 id="category1"></h2>
-                <img src="assets/images/food/beef-stir-fry.jpg" id="food1" class="food">
+                <img src="assets/images/food/Steak with Vegatables.jpg" id="food1" class="food">
                 <h4 id="name1"></h4>
                 <img src="assets/images/star.svg" class="favourite-grey" id="star1" onclick=changeIsFavourite(1)>
             </div>
@@ -46,7 +46,7 @@
                 getIsFavourite(4)
                 </script>
                 <h2 id="category4"></h2>
-                <img src="assets/images/food/beef-stir-fry.jpg" id="food4" class="food">
+                <img src="assets/images/food/Butter Chicken.jpg" id="food4" class="food">
                 <h4 id="name4"></h4>
                 <img src="assets/images/star.svg" class="favourite-grey" id="star4" onclick=changeIsFavourite(4)>
             </div>
@@ -59,7 +59,7 @@
                 getIsFavourite(6)
                 </script>
                 <h2 id="category6"></h2>
-                <img src="assets/images/food/beef-stir-fry.jpg" id="food6" class="food">
+                <img src="assets/images/food/Nachos.jpg" id="food6" class="food">
                 <h4 id="name6"></h4>
                 <img src="assets/images/star.svg" class="favourite-grey" id="star6" onclick=changeIsFavourite(6)>
             </div>
