Changed Saved Recipe Images

--- a/saved-recipes.html
+++ b/saved-recipes.html
@@ -59,7 +59,7 @@
                 getIsFavourite(6)
                 </script>
                 <h2 id="category6"></h2>
-                <img src="assets/images/food/Nachos.jpg" id="food6" class="food">
+                <img src="assets/images/food/Nachos.png" id="food6" class="food">
                 <h4 id="name6"></h4>
                 <img src="assets/images/star.svg" class="favourite-grey" id="star6" onclick=changeIsFavourite(6)>
             </div>
