Changed Recipe Images

--- a/recipes.html
+++ b/recipes.html
@@ -32,7 +32,7 @@
           getIsFavourite(0)
         </script>
         <h2 id="category0"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food0" class="food">
+        <img src="assets/images/food/Lasagna.jpg" id="food0" class="food">
         <h4 id="name0"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star0" onclick=changeIsFavourite(0)>
       </div>
@@ -45,7 +45,7 @@
           getIsFavourite(1)
         </script>
         <h2 id="category1"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food1" class="food">
+        <img src="assets/images/food/Steak with Vegatables.jpg" id="food1" class="food">
         <h4 id="name1"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star1" onclick=changeIsFavourite(1)>
       </div>
@@ -58,7 +58,7 @@
           getIsFavourite(2)
         </script>
         <h2 id="category2"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food2" class="food">
+        <img src="assets/images/food/Beef Stir Fry.jpg" id="food2" class="food">
         <h4 id="name2"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star2" onclick=changeIsFavourite(2)>
       </div>
@@ -71,7 +71,7 @@
           getIsFavourite(3)
         </script>
         <h2 id="category3"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food3" class="food">
+        <img src="assets/images/food/Burger.jpg" id="food3" class="food">
         <h4 id="name3"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star3" onclick=changeIsFavourite(3)>
       </div>
@@ -84,7 +84,7 @@
           getIsFavourite(4)
         </script>
         <h2 id="category4"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food4" class="food">
+        <img src="assets/images/food/Butter Chicken.jpg" id="food4" class="food">
         <h4 id="name4"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star4" onclick=changeIsFavourite(4)>
       </div>
@@ -97,7 +97,7 @@
           getIsFavourite(5)
         </script>
         <h2 id="category5"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food5" class="food">
+        <img src="assets/images/food/Chicken Schnitzel.jpg" id="food5" class="food">
         <h4 id="name5"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star5" onclick=changeIsFavourite(5)>
       </div>
@@ -110,7 +110,7 @@
           getIsFavourite(6)
         </script>
         <h2 id="category6"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food6" class="food">
+        <img src="assets/images/food/Nachos.png" id="food6" class="food">
         <h4 id="name6"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star6" onclick=changeIsFavourite(6)>
       </div>
@@ -123,7 +123,7 @@
           getIsFavourite(7)
         </script>
         <h2 id="category7"></h2>
-        <img src="assets/images/food/beef-stir-fry.jpg" id="food7" class="food">
+        <img src="assets/images/food/Fried Salmon.jpg" id="food7" class="food">
         <h4 id="name7"></h4>
         <img src="assets/images/star.svg" class="favourite-grey" id="star7" onclick=changeIsFavourite(7)>
       </div>
