--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@
     </body>   
     
     <body>
-        <h4> Hear from our Happy Customers </h4>
-        <img src="assets/images/review_photo.jpg" id="review-image">
+        <img src="assets/images/Customer Photo.jpg" id="review-image">
         <p>Amazing app! So simple to use and helped me become so much healthier and not waste food! 
            Thank you for creating this app and changing my life!</p>
 
