--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<li class="nav-item">
         		<h2>Meat</h2>
 				<section class="basic-grid">
-					<div class="card" onclick="addSelection('Beef')">Beef</div>
-					<div class="card" onclick="addSelection('Chicken')">Chicken</div>
+					<div class="card" onclick="addSelection('Bacon')">Bacon</div>
+					<div class="card" onclick="addSelection('Cheese')">Cheese</div>
 					<div class="card" onclick="addSelection('Lamb')">Lamb</div>
 					<div class="card" onclick="addSelection('Fish')">Fish</div>
 					<div class="card" onclick="addSelection('Veal')">Veal</div>
@@ -98,8 +98,8 @@
 
 	<main id="main">
 		<div class="container" id="selection-container"></div>
-
-		<button class="generate-btn" onclick="location.href = './recipes.html';">Generate Recipes</button>
+		<!-- <button class="generate-btn" onclick="location.href = './recipes.html';">Generate Recipes</button> -->
+		<button class="generate-btn" onclick="getRecipes()">Generate Recipes</button>
 		<button id="reset" onclick="clearSelections()">Clear Selections</button>
 	
     </main>
