--- a/login.html
+++ b/login.html
@@ -9,22 +9,72 @@
 		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
 		rel="stylesheet"
 	    />
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
-
-    <div class="container">
-        <div class="card">
-            <img class="card-image" src="assets/images/logo.png"></img>
-            <form class="card-form">
-                <div class="input">
-                    <input type="text" class="input-field" placeholder="Email"required/>
-                </div>
+    <body>
+        <div class="container">
+            <div class="card">
+                <img class="card-image" src="assets/images/logo.png"></img>
+                <h1 style="text-align: center;">LOGIN</h1>
+                <form class="card-form" id="registerForm">
                     <div class="input">
-                    <input type="password" class="input-field" placeholder="Password"required/>
-                </div>
-                <div class="action">
-                    <button class="action-button" onclick="location.href = './index.html';">Login</button>
-                </div>
-            </form>
+                        <input type="text" id="username" class="input-field" placeholder="Email"required/>
+                    </div>
+                        <div class="input">
+                        <input type="password" id="password" class="input-field" placeholder="Password"required/>
+                    </div>
+                    <div class="action">
+                        <button type="submit" class="action-button">Login</button>
+                    </div>
+                </form>
+                <h2 id="message" style="text-align: center; display: none; color: red;">Unauthorised</h2>
+            </div>
         </div>
-    </div>
+        <script>
+            $(document).ready(function() {
+                $("#registerForm").submit(function(event) {
+                    $("#message").hide();
+                    event.preventDefault();
+
+                    var username = $("#username").val();
+                    var password = $("#password").val();
+
+                    var requestBody = {
+                        username: username,
+                        password: password
+                    };
+
+                    $.ajax({
+                        url: "http://127.0.0.1:8000/api/auth/",
+                        type: "POST",
+                        contentType: "application/json",
+                        data: JSON.stringify(requestBody),
+                        success: function(response, status, xhr) {
+                            if (xhr.status === 200) {
+
+                                var token = response.token;
+                                document.cookie = "token=" + encodeURIComponent(token);
+
+                                var cookies = document.cookie.split("; ");
+                                for (var i = 0; i < cookies.length; i++) {
+                                    var cookie = cookies[i].split("=");
+                                    if (cookie[0] === "token") {
+                                        console.log("Token: " + decodeURIComponent(cookie[1]));
+                                        break;
+                                    }
+                                }
+                                window.location.href = "index.html";
+                            } else {
+                                $("#message").show();
+                            }
+                        },
+                            error: function(xhr, status, error) {
+                            console.error(error);
+                            $("#message").show();
+                        }
+                    });
+                });
+            });
+        </script>
+    </body>
 </html>
