image rename, datapassing

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<section class="basic-grid">
 					<div class="card" onclick="addSelection('Bacon')">Bacon</div>
 					<div class="card" onclick="addSelection('Cheese')">Cheese</div>
-					<div class="card" onclick="addSelection('Lamb')">Lamb</div>
+					<div class="card" onclick="addSelection('Tomato Sauce')">Tomato Sauce</div>
 					<div class="card" onclick="addSelection('Fish')">Fish</div>
 					<div class="card" onclick="addSelection('Veal')">Veal</div>
 					<div class="card" onclick="addSelection('Goat')">Goat</div>
@@ -98,10 +98,8 @@
 
 	<main id="main">
 		<div class="container" id="selection-container"></div>
-		<!-- <button class="generate-btn" onclick="location.href = './recipes.html';">Generate Recipes</button> -->
 		<button class="generate-btn" onclick="getRecipes()">Generate Recipes</button>
 		<button id="reset" onclick="clearSelections()">Clear Selections</button>
-	
     </main>
  
 	
