--- a/register.html
+++ b/register.html
@@ -24,7 +24,10 @@
                     <input type="password" id="password" class="input-field" placeholder="Password"required/>
                 </div>
                 <div class="action">
-                    <button type="submit" class="action-button">Login</button>
+                    <button type="submit" class="action-button">Sign Up</button>
+                </div>
+                <div class="action">
+                    <button class="action-button" onclick="location.href = './login.html';">Back to login</button>
                 </div>
             </form>
         </div>
