--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="assets/js/addSelection.js"></script>
 </head>
 
-<body>
+<body onload="checkUser()">
 	<nav class="top-nav-bar">
 		<img class = "logo" src="assets/images/logo.png" alt="logo">
 		<ul class="top-nav-bar-container">
@@ -102,6 +102,5 @@
 		<button id="reset" onclick="clearSelections()">Clear Selections</button>
     </main>
  
-	
-
+	<script src="assets/js/checkUser.js"></script>
 </body>
