--- a/login.html
+++ b/login.html
@@ -26,6 +26,9 @@
                     <div class="action">
                         <button type="submit" class="action-button">Login</button>
                     </div>
+                    <div class="action">
+                        <button class="action-button" onclick="location.href = './register.html';">Dont have an account? <br/> Click here to sign up</button>
+                    </div>
                 </form>
                 <h2 id="message" style="text-align: center; display: none; color: red;">Unauthorised</h2>
             </div>
