--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                     };
 
                     $.ajax({
-                        url: "http://127.0.0.1:8000/api/auth/",
+                        url: "https://wdas-api.vercel.app/api/auth/",
                         type: "POST",
                         contentType: "application/json",
                         data: JSON.stringify(requestBody),
