--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
                 };
 
                 $.ajax({
-                    url: "http://127.0.0.1:8000/api/auth/create",
+                    url: "https://wdas-api.vercel.app/api/auth/create",
                     type: "POST",
                     contentType: "application/json",
                     data: JSON.stringify(requestBody),
